[package]
name = "mouse_actions"
version = "0.1.0"
authors = ["Jerem <jersou@gmail.com>"]
edition = "2021"

[dependencies]
rdev = { path = "rdev/", features = ["unstable_grab"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
dirs-sys = "0.3.7"
lazy_static = "1.4.0"
arrayvec = "0.7.2"
log = "0.4.17"
env_logger = "0.9.0"
notify = "4.0.17"
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5.6"
