[package]
name = "mouse_actions"
version = "0.4.5"
authors = ["Jerem <jersou@gmail.com>"]
repository = "https://github.com/jersou/mouse-actions"
edition = "2021"
build = "build.rs"
license = "MIT"

[dependencies]
rdev = { path = "rdev", features = ["unstable_grab"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
dirs-sys = "0.4.0"
lazy_static = "1.4.0"
arrayvec = "0.7.2"
log = "0.4.17"
env_logger = "0.10.0"
notify = "5.1.0"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.8.4"
anyhow = "1.0.70"
fs2 = "0.4.3"
tempfile = "3.5.0"
rustix = { version = "0.37.25", features = ["process"] }
users = "0.11.0"
fancy-regex = "0.11.0"

[build-dependencies]
vergen = { version = "8.1.1", features = ["build", "git", "gitcl", "cargo"] }

[profile.release]
# to generate small binary : https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"

[[bin]]
name = "mouse-actions"
path = "src/main.rs"
